SSR for navbar sample fragment

--- a/registry/server/seeds/data/templates/master.html
+++ b/registry/server/seeds/data/templates/master.html
@@ -60,7 +60,9 @@
 <body>
 
 <!-- Region "navbar" START -->
-<div id="navbar"></div>
+<div id="navbar">
+    <slot name="navbar"></slot>
+</div>
 <!-- Region "navbar" END -->
 
 <!-- Region "body" START -->
