Add newrelic error notifiers, change flow to emit errors

--- a/ilc/templates/404.ejs
+++ b/ilc/templates/404.ejs
@@ -386,10 +386,9 @@
 <body>
     <div id="error">
         <div id="box"></div>
-        <h3>ERROR <%= statusCode %></h3>
+        <h3>ERROR 404</h3>
         <p><%= errorId %></p>
-        <p>Things are a little <span>unstable</span> here</p>
-        <p>I suggest come back later</p>
+        <p>Page <span>not found</span></p>
     </div>
 </body>
 
