--- a/registry/server/seeds/data/templates/500.html
+++ b/registry/server/seeds/data/templates/500.html
@@ -387,7 +387,7 @@
     <div id="error">
         <div id="box"></div>
         <h3>ERROR 500</h3>
-        <p><%= errorId %></p>
+        <p>%ERRORID%</p>
         <p>Things are a little <span>unstable</span> here</p>
         <p>I suggest come back later</p>
     </div>
