chore: 500 error styles

--- a/registry/server/seeds/data/templates/500ForLocalhostAsIPv4.html
+++ b/registry/server/seeds/data/templates/500ForLocalhostAsIPv4.html
@@ -63,7 +63,7 @@
 
         body div#error h3 {
             position: relative;
-            font-size: 5vw;
+            font-size: 2vw;
             font-weight: 700;
             text-transform: uppercase;
             animation: blink 1.3s infinite steps(1);
@@ -71,7 +71,7 @@
 
         body div#error h3:before,
         body div#error h3:after {
-            content: 'ERROR 500';
+            content: '500 Internal Server Error on 127.0.0.1';
             position: absolute;
             top: -1px;
             left: 0;
